deploy/retrieveUnpackaged/objects/Standard_Customer_Call__c.object
<CustomObject>
    <description>This object was created to capture various customer calls made by the Support team. A new record type will be created to support all of the standard call templates currently being used.</description>
    <fields>
        <fullName>AC_Notes__c</fullName>
        <label>AC Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Check_Notes__c</fullName>
        <label>Account Check Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Notes__c</fullName>
        <label>Account Contact Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Standard Customer Call</relationshipLabel>
        <relationshipName>R00N50000001nWX4EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Reviews__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Further explain the Account Reviews and establish when the Account Review will be held.</inlineHelpText>
        <label>Account Reviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This section will allow you to manage your account.  You can request upgrades to your servers, which will generate a ticket so your BDC can work to get you what you need.</inlineHelpText>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acct_Number__c</fullName>
        <formula>Account_Name__r.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <inlineHelpText>Outline an Action Plan if there are open issue.</inlineHelpText>
        <label>Action Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If not activated then either downgrade the device or proactively remind your customer that this is available to them.</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If they are not listed on the account contact list then for security and protection of your information, we will not divulge any information.</inlineHelpText>
        <label>Additional Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the customer is being billed for additional storage or Blackberry, does this match what they have requested (check ticket history)?</inlineHelpText>
        <label>Additional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addt_Servers_Load_Balancer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addt Servers/Load Balancer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do the servers have correct MB agents installed?</inlineHelpText>
        <label>Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Notes__c</fullName>
        <label>Attendance Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check BW allowance per server.  If over 100GB check Navision info to make sure the BW allowance is inline with up/downgrades.</inlineHelpText>
        <label>BW Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BW_Check_Notes__c</fullName>
        <label>BW Check Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bandwitdh_Notes__c</fullName>
        <label>Bandwitdh Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In the billing section you can submit payments, view invoices and review account transactions such as payments and credits.</inlineHelpText>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Industry_Challenges__c</fullName>
        <inlineHelpText>Enter in any Business or Industry Challenges that were reviewed during your call.</inlineHelpText>
        <label>Business/Industry Challenges</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <formula>(End_of_Call__c - Start_of_Call__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Name__c</fullName>
        <inlineHelpText>Please include the Account Name and Month (Rackspace - July)</inlineHelpText>
        <label>Call Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Ticket_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Validation of ticket number pending general release.
Required:  ONLY WHEN Review Type = Proactive OR Meeting</inlineHelpText>
        <label>Core Ticket Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pull MB configuration report and cross reference with core that correct servers are being backed up i.e. check the MBVS in core matches the report.</inlineHelpText>
        <label>Correct Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Any updates in outstanding credit memos?</inlineHelpText>
        <label>Credits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Solution_Notes__c</fullName>
        <label>Current Solution Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer1__c</fullName>
        <label>Customer1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Standard Customer Call</relationshipLabel>
        <relationshipName>R00N50000001nWXYEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer2__c</fullName>
        <label>Customer2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Standard Customer Call (Contact2)</relationshipLabel>
        <relationshipName>R00N50000001nWXdEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer3__c</fullName>
        <label>Customer3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Standard Customer Call (Contact3)</relationshipLabel>
        <relationshipName>R00N50000001nWXiEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Arrangement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are all devices organized correctly?</inlineHelpText>
        <label>Device Arrangement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check all devices are being billed for?</inlineHelpText>
        <label>Device Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Navision_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cross reference SKU changes with Navision info</inlineHelpText>
        <label>Device Navision Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Notes__c</fullName>
        <label>Device Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Here is where you can view all servers and net devices and configuration details, view passwords and review/edit Emergency Instructions.  You can also review any IP’s assigned to those servers.</inlineHelpText>
        <label>Devices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is our DNS tool that enables you to manage your DNS.  If a domain should need to be deleted you’ll need to notify us so we can take care of this for you.</inlineHelpText>
        <label>Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please provide emergency instructions for Account and/or Server.</inlineHelpText>
        <label>Emergency Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Double check monitoring is enabled</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_of_Call__c</fullName>
        <label>End of Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enterprise_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>As a minimum make sure primary contact has all permissions, for the rest, amend to the best of your knowledge</inlineHelpText>
        <label>Enterprise Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firewall_IDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Firewall/IDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INS_IMP_Notes__c</fullName>
        <inlineHelpText>Enter in the CORE number for the INS IMP Notes.</inlineHelpText>
        <label>INS IMP Notes</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR_EI_Notes__c</fullName>
        <label>IR/EI Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imp_Call_Date_Opt1__c</fullName>
        <inlineHelpText>The time will default to current time so please ensure you enter in the correct time for the call.</inlineHelpText>
        <label>Imp Call Date (Opt1)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Imp_Call_Date_Opt2__c</fullName>
        <inlineHelpText>The time will default to current time so please ensure you enter in the correct time for the call.</inlineHelpText>
        <label>Imp Call Date (Opt2)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Imp_Call_Date_Opt3__c</fullName>
        <inlineHelpText>The time will default to current time so please ensure you enter in the correct time for the call.</inlineHelpText>
        <label>Imp Call Date (Opt3)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MBU_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the account have the correct MBU allowance, are they paying for it?</inlineHelpText>
        <label>MBU Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBU_Navision_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cross reference SKU changes with Navision info</inlineHelpText>
        <label>MBU Navision Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBU_Notes__c</fullName>
        <label>MBU Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMC_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cross reference correct number of mailboxes with the monthly invoice</inlineHelpText>
        <label>MMC Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailtrust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailtrust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_Backup_Config_Notes__c</fullName>
        <label>Managed Backup Config Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managed_Mail_Notes__c</fullName>
        <label>Managed Mail Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managed_Monitoring_Notes__c</fullName>
        <label>Managed Monitoring Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Master_IMP_Ticket__c</fullName>
        <inlineHelpText>Enter in the CORE number for the Master IMP Ticket.</inlineHelpText>
        <label>Master IMP Ticket</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Server_Notes__c</fullName>
        <label>Migration Server Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Notes__c</fullName>
        <label>Monitoring Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Backup_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are servers that are not being backed up legitimate?</inlineHelpText>
        <label>No Backup Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are all devices marked online – complete?</inlineHelpText>
        <label>Online Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Tickets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check all outstanding tickets and make sure they have been addressed.</inlineHelpText>
        <label>Open Tickets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Device_Notes__c</fullName>
        <label>Other Device Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCI_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCI Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Notes__c</fullName>
        <inlineHelpText>Select the service that the customer are not currently using, but could possibly benefit from and any notes based on your conversation with the customer.</inlineHelpText>
        <label>Performance Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ping_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is PING enabled on all devices?</inlineHelpText>
        <label>Ping Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Growth__c</fullName>
        <label>Potential Growth</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RS101_Call_Date__c</fullName>
        <label>RS101 Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Racker1__c</fullName>
        <label>Racker1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001nWZ5EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racker2__c</fullName>
        <label>Racker2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001nWZAEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racker3__c</fullName>
        <label>Racker3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001nWZFEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Wish_List__c</fullName>
        <label>Renewal Wish List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We take a 3 tier approach to monitoring, as we discussed during implementation.  In this section you’ll find reports that contain monitoring data from the previous month.</inlineHelpText>
        <label>Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Value__c</fullName>
        <label>Review Value</label>
        <picklist>
            <controllingField>Review_Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSL_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSL Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ensure SF contains as much up to date information on the account as possible.</inlineHelpText>
        <label>Salesforce Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Obtain secret question/answer and explain purpose.</inlineHelpText>
        <label>Security Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_Due_Date__c</fullName>
        <label>Server Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Server_Performance_Notes__c</fullName>
        <label>Server Performance Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services_Notes__c</fullName>
        <inlineHelpText>Cover any services that they aren&apos;t currently using, but could possibly benefit from.</inlineHelpText>
        <label>Services Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Here you can read more about a couple of our highlighted services.  If you’re interested in obtaining those please just let us know.  You can also view details regarding any SSL certs you might purchase through RS.</inlineHelpText>
        <label>Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_of_Call__c</fullName>
        <label>Start of Call</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Both attached storage and cloud storage, via Mosso</inlineHelpText>
        <label>Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Team_BDC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is correct support team assigned? UK M1 for Windows, UK M2 for Linux, and UK BDC assigned?</inlineHelpText>
        <label>Support Team/BDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is one of the most important sections in our portal.  This is where you can submit and review tickets.  This is our primary channel of communication so documentation of needs and changes are crucial to supporting you ‘round the clock.</inlineHelpText>
        <label>Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Review_Notes__c</fullName>
        <label>Ticket Review Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>URL Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unmetered_Managed_Backup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmetered Managed Backup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Other devices like for example router, switch or Google minis – are they being billed for, are they on the account as devices?</inlineHelpText>
        <label>Verify Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Address any migration devices that have been tagged migration status for 2 months or more.</inlineHelpText>
        <label>Verify Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtualization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtualization</label>
        <type>Checkbox</type>
    </fields>
    <label>Standard Customer Call</label>
    <listViews>
        <fullName>AllAccountAuditsUK</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Value__c</columns>
        <columns>Call_Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.AccountAuditUK</value>
        </filters>
        <label>All Account Audits - UK</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllAccountReviewsUK</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Value__c</columns>
        <columns>Call_Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.AccountReviewUK</value>
        </filters>
        <label>All Account Reviews - UK</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllCustomerCalls</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>General_Notes__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customer Calls</label>
    </listViews>
    <listViews>
        <fullName>AllImplementationCallItems</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.ImpCall</value>
        </filters>
        <label>All Implementation Call Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllMARItems</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.MAR</value>
        </filters>
        <label>All MAR Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllPulseChecks</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.PulseCheck</value>
        </filters>
        <label>All Pulse Checks</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllRS101Items</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.RS101</value>
        </filters>
        <label>All RS101 Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllWarmHandOffItems</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.WarmHandOff</value>
        </filters>
        <label>All Warm Hand-Off Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyAccountAuditsUK</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Value__c</columns>
        <columns>Call_Duration__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.AccountAuditUK</value>
        </filters>
        <label>My Account Audits - UK</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyAccountReviewsUK</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Value__c</columns>
        <columns>Call_Duration__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.AccountReviewUK</value>
        </filters>
        <label>My Account Reviews - UK</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyImplementationCallItems</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.ImpCall</value>
        </filters>
        <label>My Implementation Call Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyMARItems</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.MAR</value>
        </filters>
        <label>My MAR Items</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyPulseChecks</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.PulseCheck</value>
        </filters>
        <label>My Pulse Checks</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyRS101Items</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Call_Duration__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Customer1__c</columns>
        <columns>General_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Standard_Customer_Call__c.RS101</value>
        </filters>
        <label>My RS101 Items</label>
        <sharedTo/>
    </listViews>
</CustomObject>